# tp_1_modelisation_par_agent

./: Cargo.toml  README.md
particules/: Cargo.toml
particules/src/: agent.rs  behavior.rs  core.rs  environment.rs  lib.rs  sma.rs
particules/src/particules/: agent.rs
particules/src/wator/: fish.rs  mod.rs  shark.rs
particules_app/: Cargo.toml
particules_app/src/: lib.rs  main.rs
particules_app/src/component/: cell.rs  grid.rs
particules_app/static/: index.html  styles.css
particules_desktop/: Cargo.toml  config.json  example_2.json
particules_desktop/src/: main.rs  user_config.rs
