[package]
name = "particules_app"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.11"
rand = { version = "0.6.5", features = ["stdweb"] }
log = "0.4"
web_logger = "0.1"
particules = {path = "../particules"}
